Update home hero video

--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -37,7 +37,7 @@
   <!-- Background Video -->
   <div class="hero-video-wrap">
     <video id="heroVideo" autoplay loop muted playsinline preload="auto" class="heroVideo object-cover">
-      <source src="/videos/herovid.mp4" type="video/mp4" />
+      <source src="/videos/home-herovid.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
